# R4C

./: db.sqlite3  pyproject.toml
R4C/: settings.py  urls.py
orders/: callbacks.py
robots/: apps.py  forms.py  tests.py  tools.py  views.py
