[tool.poetry]
name = "R4C"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
xlsxwriter = "^3.1.6"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
black = "^23.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
